Updates c++ Tensorflow to 2.0, upgrading max Bazel support to 0.29.1.
PiperOrigin-RevId: 279648820

--- a/examples/tensorflow/linear-model-notebook.ipynb
+++ b/examples/tensorflow/linear-model-notebook.ipynb
@@ -199,7 +199,7 @@
    "source": [
     "# Write the example into training and validation files.\n",
     "for split in ['train', 'validation']:\n",
-    "    with tf.python_io.TFRecordWriter(path + split) as writer:\n",
+    "    with tf.io.TFRecordWriter(path + split) as writer:\n",
     "        for seqex in [seqex_pb] * 100:\n",
     "            writer.write(seqex.SerializeToString())"
    ]
@@ -455,7 +455,7 @@
     "      if shuffle:\n",
     "        files = files.shuffle(buffer_size=len(file_names))\n",
     "      dataset = (files\n",
-    "                 .apply(tf.contrib.data.parallel_interleave(\n",
+    "                 .apply(tf.data.parallel_interleave(\n",
     "                     tf.data.TFRecordDataset, cycle_length=10))\n",
     "                 .repeat(num_epochs))\n",
     "      if shuffle:\n",
@@ -786,7 +786,7 @@
     "        class_id=i)\n",
     "\n",
     "  return metrics_dict\n",
-    "estimator = tf.contrib.estimator.add_metrics(estimator, multiclass_metrics_fn)"
+    "estimator = tf.estimator.add_metrics(estimator, multiclass_metrics_fn)"
    ]
   },
   {
