Adds go examples.
PiperOrigin-RevId: 317002209

--- a/examples/gcp_datalab/notebooks/2_deploy_and_run_ml_model_to_predict_los.ipynb
+++ b/examples/gcp_datalab/notebooks/2_deploy_and_run_ml_model_to_predict_los.ipynb
@@ -624,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>You can check the status of the job and other information on <a href=\"https://pantheon.corp.google.com/mlengine/jobs\">GCP CloudML page</a> </b>"
+    "<b>You can check the status of the job and other information on <a href=\"https://console.cloud.google.com/mlengine/jobs\">GCP CloudML page</a> </b>"
    ]
   },
   {
@@ -801,7 +801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>You can check the status of the job and other information on <a href=\"https://pantheon.corp.google.com/mlengine/jobs\">GCP CloudML page</a> </b>"
+    "<b>You can check the status of the job and other information on <a href=\"https://console.cloud.google.com/mlengine/jobs\">GCP CloudML page</a> </b>"
    ]
   },
   {
