--- a/examples/gcp_datalab/notebooks/2_deploy_and_run_ml_model_to_predict_los.ipynb
+++ b/examples/gcp_datalab/notebooks/2_deploy_and_run_ml_model_to_predict_los.ipynb
@@ -829,6 +829,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.15"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
