Separates "google" extensions into two extension files: google.fhir.$version.fhirproto for extensions that are inherent to the FHIR proto format and do not appear in JSON, and google.fhir.$version.ml for machine-learning related extensions.
In addition to being more descriptive and tighter in scope, these names eliminate the problem vector that occurs from having the token "google" twice in the same namespace

PiperOrigin-RevId: 324271177

--- a/examples/gcp_datalab/notebooks/1_train_and_eval_ml_model_to_predict_los.ipynb
+++ b/examples/gcp_datalab/notebooks/1_train_and_eval_ml_model_to_predict_los.ipynb
@@ -90,7 +90,7 @@
     "import time\n",
     "\n",
     "from proto import version_config_pb2\n",
-    "from proto.stu3 import google_extensions_pb2\n",
+    "from proto.stu3 import fhirproto_extensions_pb2\n",
     "from proto.stu3 import resources_pb2\n",
     "\n",
     "from google.protobuf import text_format\n",
@@ -251,7 +251,7 @@
     "\n",
     "_ = labels | beam.io.WriteToTFRecord(\n",
     "    LABELS_PATH,\n",
-    "    coder=beam.coders.ProtoCoder(google_extensions_pb2.EventLabel),\n",
+    "    coder=beam.coders.ProtoCoder(fhirproto_extensions_pb2.EventLabel),\n",
     "    file_name_suffix='.tfrecords')"
    ]
   },
@@ -486,7 +486,7 @@
     "event_labels = ( \n",
     "    p1 | 'readEventLabels' >> beam.io.ReadFromTFRecord(\n",
     "        TF_RECORD_LABELS,\n",
-    "        coder=beam.coders.ProtoCoder(google_extensions_pb2.EventLabel)))\n",
+    "        coder=beam.coders.ProtoCoder(fhirproto_extensions_pb2.EventLabel)))\n",
     "\n",
     "keyed_event_labels = bundle_to_seqex.CreateTriggerLabelsPairLists(\n",
     "    event_labels)\n",
