--- a/examples/gcp_datalab/notebooks/2_deploy_and_run_ml_model_to_predict_los.ipynb
+++ b/examples/gcp_datalab/notebooks/2_deploy_and_run_ml_model_to_predict_los.ipynb
@@ -93,7 +93,7 @@
     "import time\n",
     "\n",
     "from proto import version_config_pb2\n",
-    "from proto.stu3 import google_extensions_pb2\n",
+    "from proto.stu3 import fhirproto_extensions_pb2\n",
     "from proto.stu3 import resources_pb2\n",
     "\n",
     "from google.protobuf import text_format\n",
